adding validation for duplicated transaction id